# ops-platform

./: .dockerignore  .env.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  test_feedback_matching.py  test_ppt_matching.py
backend/alembic/: env.py
backend/alembic/versions/: 078854a32784_add_attendance_presenter_order.py  16f063455561_add_users_table.py  2576f4f9f7fd_add_note_to_attendance.py  2f75826f6c04_초기_스키마.py  489add7af901_add_group_num_to_attendance.py  4f4d23d93d94_rename_cafe_posts_homework_to_ppt.py  85d70b6a7265_add_totp_secret_to_users.py  911b3aacfed8_drop_is_leader_from_team_members.py  a22562d3b224_add_generation_accounts_table.py  a3d6c2e8f1b7_scoring_require_feedback.py  a4b5c6d7e8f9_announcement_staff_reactions_comments.py  a7b8c9d0e1f2_cohort_multitenancy.py  ade928d4503a_scoring_심사_점수_집계_공개_링크_채점.py  b2c3d4e5f6a7_add_hidden_member_ids.py  b33f7a8c1e50_add_eval_tables.py  b4e7f1a9c2d6_scoring_participant_draft.py  b5c6d7e8f9a0_live_feedback_staff_author.py  b8c9d0e1f2a3_team_building_draft.py  bf3a91c07d24_scoring_observer_groups.py  c04e7b219f85_scoring_roster_group_team_members.py  c1d2e3f4a5b6_add_live_feedback_tables.py  c6d7e8f9a0b1_live_feedback_staff_reaction.py  c824f4eea459_add_cafe_posts_and_assignment_target_.py  c9a1e7f2d301_eval_round_optional_session_combined.py  (+14 more)
backend/app/: audit.py  config.py  database.py  deps.py  logging_config.py  main.py  models.py  worker.py
backend/scripts/: seed.py  seed_demo_final_report.py
backend/tests/: test_eval_comparison.py  test_scoring_engine.py
(+239 files in other folders)
