[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "univpt-ops-backend"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.1.0",
    "pyotp>=2.9.0",
    "arq>=0.25.0",
    "requests>=2.31.0",
    "imapclient>=3.0.0",
    "playwright>=1.44.0",
    "google-api-python-client>=2.130.0",
    "google-auth>=2.29.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
all = [
    "univpt-ops-backend[dev]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
